--- a/src/PopularActivities/PopularActivities.css
+++ b/src/PopularActivities/PopularActivities.css
@@ -5,21 +5,20 @@
   overflow: hidden;
 }
 
-
 .Activity_1_2 {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 
-.Activity_1, .Activity_2 {
+.Activity_1,
+.Activity_2 {
   height: 250px !important;
 }
 
 .Activity_3 {
   height: 527px !important;
 }
-
 
 .Activity_4_5_6 {
   display: flex;
@@ -35,7 +34,8 @@
   display: flex;
 }
 
-.Activity_5, .Activity_6 {
+.Activity_5,
+.Activity_6 {
   height: 250px !important;
 }
 
@@ -51,7 +51,6 @@
   object-fit: cover;
 }
 
-
 .image-wrapper::before {
   content: "";
   position: absolute;
@@ -60,7 +59,7 @@
   width: 100%;
   height: 100%;
   background: linear-gradient(
-    180deg, 
+    180deg,
     rgba(5, 7, 60, 0) 0%,
     rgba(5, 7, 60, 0.7) 100%
   );
@@ -80,19 +79,15 @@
 @media (max-width: 768px) {
   .activity-container {
     height: 200px !important;
-    border-radius: 0;
+    border-radius: 12px;
   }
-  
+
   .Activity_3 {
     height: 200px !important;
   }
-  
-  .GroupActivity {
-    flex-direction: column;
-    gap: 1rem;
-  }
-  
-  .Activity_5, .Activity_6 {
+
+  .Activity_5,
+  .Activity_6 {
     height: 200px !important;
   }
 }
