--- a/src/Banner/Banner.css
+++ b/src/Banner/Banner.css
@@ -1,3 +1,5 @@
+
+
 .banner__container {
     background-image: url('../assets/images/banner.jpg');
     background-size: cover;
@@ -14,7 +16,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #0000004d;
+    background-color: var(--background-color);
     border-radius: 10px;
   }
   
@@ -37,16 +39,16 @@
     border-radius: 8px;
     padding: 8px;
     overflow: hidden;
-    background-color: #f2f2f2;
+    background-color: var(--background-color-input);
   }
   .input__group input {
-    color: #333;
+    color: var(--text-color-input-primary);
     background-color: transparent;
     
   }
   .input__group__text {
     margin-right: 10px;
-    color: #666;
+    color: var(--text-color-input-secondery);
   }
 
   .form-control {
@@ -70,7 +72,7 @@
   }
   
   .Travel__Booking__container {
-    background-color: #fff;
+    background-color: var(--text-color);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -104,55 +106,3 @@
     }
   
   }
-
-
-
-
-/*   
-
-.warning {
-  margin-top: 50px;
-}
-
-.warning-container {
-  width: 100%;
-  height: 72px;
-  background-color: #f4c123;
-  border-radius: 8px;
-  display: flex;
-  align-items: center;
-  padding: 0 20px;
-  gap: 19px;
-  box-sizing: border-box;
-}
-
-.warning-container img {
-  width: 24px;
-  height: 24px;
-}
-
-.text-warning {
-  flex: 1;
-
-
-}
-
-.warning-container p {
-  font-family: 'Barlow', sans-serif;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 22.4px;
-  letter-spacing: 0.02em;
-  color: #333333;
-  margin: 0;
-}
-
-.warning-container span {
-  font-family: 'Barlow', sans-serif;
-  font-size: 1rem;
-  font-weight: 400;
-  line-height: 22.4px;
-  letter-spacing: 0.02em;
-  color: #1576d6;
-  cursor: pointer;
-} */
