--- a/src/index.css
+++ b/src/index.css
@@ -22,8 +22,18 @@ body,
     rgba(5, 7, 60, 0) 0%,
     #05073c 100%
   );
-  --background-color: #686464;
+  --background-linear-color-secondry:linear-gradient(
+    180deg,
+    rgba(5, 7, 60, 0) 0%,
+    rgba(5, 7, 60, 0.7) 100%
+  );
+  --background-color: #0000004d;
+  --background-color-input:#f2f2f2;
+  --bacground-color-secondery:#fefcf1;
   --text-color: #fff;
+  --text-color-input-primary: #333;
+  --text-color-input-secondery: #666;
+  --links-color:#6c757d;
 }
 
 h1,
