--- a/src/NavBar/NavBar.css
+++ b/src/NavBar/NavBar.css
@@ -42,7 +42,7 @@
   top: 60px;
   left: 0;
   right: 0;
-  background-color: var( --background-color);
+  background-color: var( --background-color-nav);
   z-index: 1000;
   max-height: 0;
   overflow: hidden;
@@ -51,8 +51,6 @@
 
 .mobile-navbar-collapse.show {
   max-height: 500px;
-  width: 100%;
-  overflow-y: auto
 }
 
 /* Style the mobile menu links */
